packages/beff-wasm/fixtures/errors/cannot-resolve/r6.ts
export type Router6 = {};

export interface Router7 {}
